--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,9 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
 body {
   font-family: Arial, Helvetica, sans-serif;
   overflow-x: hidden;
+  width: 100dvw;
+}
+body {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
