feat: projects 내용 수정 및 반영

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,7 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  position: relative;
 }
 
 @layer base {
