--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,16 +4,9 @@
 
 html,
 body {
-  font-family: Arial, Helvetica, sans-serif;
   overflow-x: hidden;
   width: 100dvw;
-}
-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  position: relative;
+  scroll-behavior: smooth;
 }
 
 @layer base {
